<resources>
    <string name="app_name">Happy Places</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">SAVE</string>
    <string name="note_text_no_happy_places_found_yet">No Happy Places Found Yet. Kindly add one</string>


    <string name="image_content_description">image</string>

    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
    <string name="view_on_map">VIEW ON MAP</string>

    <string name="google_maps_api_key">AIzaSyDKO_tB1YEKhSmc9mmq82865we6FYN23IE</string>
    <string name="btn_select_current_location_text">SELECT CURRENT LOCATION</string>
</resources>