<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHappyPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_place"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_place"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/pink4"
                android:orientation="vertical"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@color/black"
                    android:hint="@string/title"
                    android:textSize="16sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/pink4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@color/black"
                    android:hint="@string/description"
                    android:textSize="16sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/pink4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@color/black"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date"
                    android:textSize="16sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/pink4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@color/black"
                    android:hint="@string/location"
                    android:textSize="16sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                >

                <ImageView
                    android:id="@+id/ivImageUpload"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="12dp"
                    android:padding="50dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/shape_image_view_border"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_image_icon"
                    />

                <TextView
                    android:id="@+id/tvAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image"
                    android:padding="5dp"
                    app:layout_constraintStart_toEndOf="@id/ivImageUpload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ivImageUpload"
                    app:layout_constraintBottom_toBottomOf="@id/ivImageUpload"
                    android:foreground="?attr/selectableItemBackground"
                    android:textSize="18sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink4"
                android:layout_margin="10dp"
                android:text="@string/save"
                android:textSize="16sp"
                />

        </LinearLayout>





    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>